# iggy-bench-dashboard

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  run.sh
.github/workflows/: build-and-test.yml  ci.yml  docker.yml  sanity.yml
collector/: Cargo.toml
collector/src/: main.rs
collector/src/app/: local_benchmark_runner.rs  mod.rs  utils.rs
collector/src/args/: local_benchmark.rs  mod.rs
collector/src/github/: client.rs
configs/: grafana_config.env
frontend/: Cargo.toml  Trunk.toml  index.dev.html  index.html  index.prod.html
frontend/assets/: style.css
frontend/scripts/: select_index.sh
frontend/src/: config.rs  error.rs  main.rs  router.rs
frontend/src/api/: mod.rs
frontend/src/components/: app_content.rs  benchmark_info_tooltip.rs  benchmark_result.rs  benchmark_selector.rs  footer.rs  gitref_selector.rs  hardware_selector.rs  measurements.rs  mod.rs  single_chart.rs  theme_provider.rs  trend_chart.rs  view_mode_toggle.rs
frontend/src/components/chart/: mod.rs  plot_trend.rs  single_chart.rs  trend_chart.rs
frontend/src/components/layout/: logo.rs  main_content.rs  mod.rs  sidebar.rs  topbar.rs
frontend/src/components/plot/: mod.rs  single.rs  trend.rs
frontend/src/components/selectors/: benchmark_kind_selector.rs  benchmark_selector.rs  gitref_selector.rs  hardware_selector.rs  measurement_type_selector.rs  mod.rs  view_mode_selector.rs
frontend/src/components/theme/: mod.rs  theme_toggle.rs
frontend/src/components/tooltips/: benchmark_info_toggle.rs  benchmark_info_tooltip.rs  mod.rs  server_stats_toggle.rs  server_stats_tooltip.rs
frontend/src/state/: benchmark.rs  gitref.rs  hardware.rs  mod.rs  ui.rs  view_mode.rs
frontend/src/types/: mod.rs
frontend/src/utils/: mod.rs
grafana-dashboards/dashboards/: consumers.json  producers.json
grafana-provisioning/dashboards/: dashboard.yml
grafana-provisioning/datasources/: datasource.yaml
runner/: Cargo.toml
runner/src/: args.rs  main.rs
runner/src/app/: local_benchmark_runner.rs  mod.rs  utils.rs
scripts/: build_release.sh  rebuild_database.sh  run_dev.sh  setup.sh
server/: Cargo.toml
server/src/: args.rs  cache.rs  config.rs  error.rs  handlers.rs  main.rs
server/src/cache/: loader.rs  mod.rs  query.rs  storage.rs  watcher.rs
server/src/github/: client.rs  mod.rs  poll.rs  poller.rs
shared/: Cargo.toml
shared/src/: lib.rs  subtext.rs  title.rs
src/: app.rs  flow.rs  main.rs  validate.rs
src/app/: ingestor.rs  local_benchmark_runner.rs  mod.rs  utils.rs
src/args/: ingest.rs  local_benchmark.rs  mod.rs  poll_github.rs
src/db/: client.rs  response.rs
src/github/: download.rs
src/models/: actor_statistics.rs  aggregate_statistics.rs  mod.rs  params.rs  record.rs  summary.rs
