[package]
name = "iggy-dashboard"
version = "0.1.0"
edition = "2021"
authors = ["h.gruszecki@gmail.com"]
repository = "https://github.com/iggy-rs/iggy-dashboard"
homepage = "https://iggy.rs"
description = "CLI application to ingest Iggy performance results from various sources and store them in InfluxDB"
license = "MIT"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive"] }
csv = "1.3.1"
influxdb = { version = "0.7.2", features = ["derive"] }
serde = { version = "1.0.210", features = ["derive", "rc"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
toml = { version = "0.8.19" }
octocrab = { version = "0.42.1", features = ["tokio"] }
anyhow = "1.0.93"
zip = "2.2.1"
git2 = "0.19.0"
tracing = { version = "0.1.41" }
tracing-appender = "0.2.3"
tempfile = "3.14.0"
dircpy = "0.3.19"
rust_dotenv = "0.1.2"
