[package]
name = "iggy-dashboard-collector"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.23", features = ["derive"] }
csv = "1.3.1"
serde = { version = "1.0.216", features = ["derive", "rc"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
toml = { version = "0.8.19" }
octocrab = { version = "0.42.1", features = ["tokio"] }
anyhow = "1.0.94"
zip = "2.2.1"
git2 = "0.20.0"
tracing = { version = "0.1.41" }
tracing-appender = "0.2.3"
tempfile = "3.14.0"
dircpy = "0.3.19"
rust_dotenv = "0.1.2"
walkdir = "2.5.0"
