[package]
name = "iggy-dashboard-frontend"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"

[dependencies]
charming = { version = "0.4.0", features = ["wasm"] }
gloo = "0.11"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
shared = { path = "../shared" }
thiserror = "2.0"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window",
    "Location",
    "HtmlSelectElement",
] }
yew = { version = "0.21", features = ["csr"] }
yew-hooks = "0.3.3"
