[package]
name = "iggy-benchmarks-dashboard-frontend"
license = "Apache-2.0"
version.workspace = true
edition.workspace = true

[dependencies]
charming = { version = "0.4.0", features = ["wasm"] }
gloo = "0.11"
js-sys = "0.3"
shared = { path = "../shared" }
thiserror = "2.0"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window",
    "Location",
    "HtmlSelectElement",
    "Clipboard",
    "Navigator",
] }
yew = { version = "0.21", features = ["csr"] }
yew-hooks = "0.3.3"
iggy-benchmark-report = { git = "https://github.com/iggy-rs/iggy.git" }
uuid = { version = "1.12.1", features = ["serde"] }
