[package]
name = "iggy-bench-dashboard-frontend"
license = "Apache-2.0"
version.workspace = true
edition.workspace = true

[package.metadata.cargo-machete]
ignored = ["getrandom"]

[dependencies]
charming = { version = "0.4.0", features = ["wasm"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
gloo = "0.11"
iggy-bench-dashboard-shared = { path = "../shared" }
iggy-bench-report = { workspace = true }
js-sys = "0.3"
thiserror = "2.0"
urlencoding = "2.1.3"
uuid = { version = "1.16.0", features = ["serde"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window",
    "Location",
    "HtmlSelectElement",
    "Clipboard",
    "Navigator",
] }
yew = { version = "0.21", features = ["csr"] }
yew-hooks = "0.3.3"
yew-router = "0.18"
