[package]
name = "iggy-bench-runner"
license = "Apache-2.0"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.23", features = ["derive"] }
dircpy = "0.3.19"
git2 = "0.20.0"
tempfile = "3.14.0"
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
