[package]
name = "iggy-bench-runner"
license = "Apache-2.0"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
dircpy = "0.3.19"
git2 = "0.20.2"
tempfile = "3.19.1"
tokio = { version = "1.45.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
