[package]
name = "iggy-dashboard-server"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.6"
actix-governor = "0.8.0"
actix-web = "4.9.0"
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
dashmap = "6.1.0"
notify = "8.0.0"
rayon = "1.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shared = { path = "../shared" }
thiserror = "2.0.11"
time = { version = "0.3", features = ["formatting"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
tokio = { version = "1.0", features = ["full"] }
