[package]
name = "iggy-bench-dashboard-server"
license = "Apache-2.0"
version.workspace = true
edition.workspace = true

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.6"
actix-web = "4.9.0"
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
dashmap = "6.1.0"
iggy-bench-dashboard-shared = { path = "../shared" }
iggy-bench-report = { workspace = true }
notify = "8.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
uuid = { version = "1.12.1", features = ["serde"] }
zip = { version = "2.2.2", features = ["deflate"] }
walkdir = "2.5.0"
