[package]
name = "iggy-bench-dashboard-server"
license = "Apache-2.0"
version.workspace = true
edition.workspace = true

[dependencies]
actix-cors = "0.7.1"
actix-files = "0.6.6"
actix-web = "4.10.2"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dashmap = "6.1.0"
file-operation = "0.5.9"
iggy-bench-dashboard-shared = { path = "../shared" }
iggy-bench-report = { workspace = true }
notify = "8.0.0"
octocrab = "0.44.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.19.1"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
uuid = { version = "1.16.0", features = ["serde"] }
walkdir = "2.5.0"
zip = { version = "2.6.1", features = ["deflate"] }
