[package]
name = "iggy-bench-dashboard-shared"
license = "Apache-2.0"
version.workspace = true
edition.workspace = true

[dependencies]
human-repr = "1.1.0"
iggy-bench-report = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.16.0", features = ["serde"] }
